--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -65,6 +65,7 @@ node_modules/
 # dotenv environment variables file
 .env
 
-/fuctions/models
+/fuctions/models/
 /fuctions/serviceAccountKey.json
 /functions/venv
+backend/functions/serviceAccountKey.json
